combined Jennifer's changes

--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,11 @@
 {
   "development": {
     "username": "root",
-    "password": "docker",
+    "password": "root",
     "database": "dinner_db",
     "host": "127.0.0.1",
     "dialect": "mysql",
-    "port": "3308"
+    "port": "3306"
   },
   "test": {
     "username": "root",
