--- a/config/config.json
+++ b/config/config.json
@@ -4,8 +4,7 @@
     "password": "docker",
     "database": "dinner_db",
     "host": "127.0.0.1",
-    "dialect": "mysql",
-    "port": "3308"
+    "dialect": "mysql"
   },
   "test": {
     "username": "root",
