--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Project 2 Starter",
   "main": "server.js",
   "scripts": {
-    "start": "server.js",
+    "start": "server.js"
   },
   "license": "ISC",
   "dependencies": {
