--- a/config/config.json
+++ b/config/config.json
@@ -19,6 +19,7 @@
     "password": "docker",
     "database": "dinner_db",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port": "3306"
   }
 }
