changing to handlebars

--- a/config/config.json
+++ b/config/config.json
@@ -15,8 +15,8 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": "docker",
+    "username": "bd869b22db3863",
+    "password": "4dbb2182",
     "database": "dinner_db",
     "host": "127.0.0.1",
     "dialect": "mysql",
