--- a/config/config.json
+++ b/config/config.json
@@ -1,18 +1,19 @@
 {
   "development": {
-    "username": "root",
-    "password": "docker",
+    "username": "bd869b22db3863",
+    "password": "4dbb2182",
     "database": "dinner_db",
     "host": "127.0.0.1",
     "dialect": "mysql",
-    "port": "3308"
+    "port": "3306"
   },
   "test": {
-    "username": "root",
-    "password": "docker",
+    "username": "bd869b22db3863",
+    "password": "4dbb2182",
     "database": "dinner_db",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port": "3306"
   },
   "production": {
     "username": "bd869b22db3863",
