--- a/config/config.json
+++ b/config/config.json
@@ -1,24 +1,26 @@
 {
   "development": {
-    "username": "root",
-    "password": "docker",
+    "username": "bd869b22db3863",
+    "password": "4dbb2182",
     "database": "dinner_db",
-    "host": "127.0.0.1",
+    "host": "heroku_9c9f78cbffbcf9c",
     "dialect": "mysql",
-    "port": "3310"
+    "port": "3306"
   },
   "test": {
     "username": "bd869b22db3863",
     "password": "4dbb2182",
     "database": "dinner_db",
     "host": "heroku_9c9f78cbffbcf9c",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port": "3306"
   },
   "production": {
     "username": "bd869b22db3863",
     "password": "4dbb2182",
     "database": "dinner_db",
     "host": "heroku_9c9f78cbffbcf9c",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port": "3306"
   }
 }
