--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,11 @@
 {
   "development": {
-    "username": "bd869b22db3863",
-    "password": "4dbb2182",
+    "username": "root",
+    "password": "docker",
     "database": "dinner_db",
-    "host": "heroku_9c9f78cbffbcf9c",
+    "host": "127.0.0.1",
     "dialect": "mysql",
-    "port": "3306"
+    "port": "3310"
   },
   "test": {
     "username": "bd869b22db3863",
